added convolutional code

--- a/notebooks/DQNpong_MSprop.ipynb
+++ b/notebooks/DQNpong_MSprop.ipynb
@@ -328,7 +328,7 @@
     "        }\n",
     "    }\n",
     "    \n",
-    "    def rmsprop(learning_rate:Float, decay_rate:Float) = {\n",
+    "    def msprop(learning_rate:Float, decay_rate:Float) = {\n",
     "//        \"\"\" Perform model updates from the gradients using RMSprop\"\"\"\n",
     "        for ((k,v) <- model) {\n",
     "            val g = grad(k).data;\n",
