--- a/notebooks/DQNpong_ConvGPU.ipynb
+++ b/notebooks/DQNpong_ConvGPU.ipynb
@@ -125,8 +125,8 @@
     }
    ],
    "source": [
-    "val nsteps = 20000001                    // Number of steps to run (game actions per environment)\n",
-    "val npar = 16                            // Number of parallel environments\n",
+    "val nsteps = 20001                    // Number of steps to run (game actions per environment)\n",
+    "val npar = 2                            // Number of parallel environments\n",
     "val target_window = 100                  // Interval to update target estimator from q-estimator\n",
     "val discount_factor = 0.99f              // Reward discount factor\n",
     "val printsteps = 10000                   // Number of steps between printouts\n",
@@ -143,8 +143,8 @@
     "val gsq_decay = 0.99f                   // Decay factor for RMSProp\n",
     "val momentum_decay = 0.9f\n",
     "val gclip = 1f\n",
-    "val rmseps = 1e-5f\n",
-    "val rmsevery = 5\n",
+    "val rmseps = 3e-6f\n",
+    "val rmsevery = 10\n",
     "\n",
     "val nhidden = 16                         // Number of hidden layers for estimators\n",
     "val nhidden2 = 32\n",
@@ -276,10 +276,15 @@
     "    model(\"W3\") = GFilter2Ddn(10,10,nhidden2,nhidden3,1,0);                     // This is actually an FC layer\n",
     "    model(\"W4\") = GFilter2Ddn(1,1,nhidden3,nactions,1,0);                       // Second FC layer\n",
     "    \n",
-    "    normrnd(0,1/math.sqrt(7*7*nwindow).toFloat, model(\"W1\"))                    // \"Xavier\" initialization    \n",
-    "    normrnd(0,1/math.sqrt(3*3*nhidden).toFloat, model(\"W2\"))                    // which is normal random with variance 1/indegree\n",
-    "    normrnd(0,1/math.sqrt(10*10*nhidden2).toFloat, model(\"W3\"))\n",
-    "    normrnd(0,1/math.sqrt(nhidden3).toFloat, model(\"W4\"))   \n",
+    "    model(\"W1\")(?) = GMat(normrnd(0,1/math.sqrt(7*7*nwindow).toFloat,7*7*nwindow*nhidden))\n",
+    "    model(\"W2\")(?) = GMat(normrnd(0,1/math.sqrt(3*3*nhidden).toFloat,3*3*nhidden*nhidden2))\n",
+    "    model(\"W3\")(?) = GMat(normrnd(0,1/math.sqrt(10*10*nhidden2).toFloat,10*10*nhidden2*nhidden3))\n",
+    "    model(\"W4\")(?) = GMat(normrnd(0,1/math.sqrt(nhidden3).toFloat,nhidden3*nactions))\n",
+    "    \n",
+    "//    normrnd(0,1/math.sqrt(7*7*nwindow).toFloat, model(\"W1\"))                    // \"Xavier\" initialization    \n",
+    "//    normrnd(0,1/math.sqrt(3*3*nhidden).toFloat, model(\"W2\"))                    // which is normal random with variance 1/indegree\n",
+    "//    normrnd(0,1/math.sqrt(10*10*nhidden2).toFloat, model(\"W3\"))\n",
+    "//    normrnd(0,1/math.sqrt(nhidden3).toFloat, model(\"W4\"))   \n",
     "    \n",
     "    for ((k,v) <- model) {\n",
     "        grad.put(k, v.copy);\n",
