--- a/notebooks/DQNpong_ConvGPU.ipynb
+++ b/notebooks/DQNpong_ConvGPU.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 CUDA device found, CUDA version 8.0\n"
+      "4 CUDA devices found, CUDA version 8.0\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -79,19 +79,17 @@
     {
      "data": {
       "text/plain": [
-       "false"
+       "  0.050579   0.39953\n",
+       "   0.73763   0.91040\n"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "val ale = new ALE\n",
-    "ale.getFloat(\"repeat_action_probability\")\n",
-    "ale.loadROM(\"/code/ALE/roms/Pong.bin\")\n",
-    "val (obs, reward, done) = ale.step(1)\n"
+    "rand(2,2)\n"
    ]
   },
   {
@@ -103,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -119,15 +117,15 @@
        "4"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "val nsteps = 20001                    // Number of steps to run (game actions per environment)\n",
-    "val npar = 2                            // Number of parallel environments\n",
-    "val target_window = 100                  // Interval to update target estimator from q-estimator\n",
+    "val nsteps = 20000001                    // Number of steps to run (game actions per environment)\n",
+    "val npar = 16                         // Number of parallel environments\n",
+    "val target_window = 50                  // Interval to update target estimator from q-estimator\n",
     "val discount_factor = 0.99f              // Reward discount factor\n",
     "val printsteps = 10000                   // Number of steps between printouts\n",
     "val render = false                       // Whether to render an environment while training\n",
@@ -144,7 +142,7 @@
     "val momentum_decay = 0.9f\n",
     "val gclip = 1f\n",
     "val rmseps = 3e-6f\n",
-    "val rmsevery = 10\n",
+    "val rmsevery = 5\n",
     "\n",
     "val nhidden = 16                         // Number of hidden layers for estimators\n",
     "val nhidden2 = 32\n",
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -248,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -262,6 +260,16 @@
    "source": [
     "import scala.collection.mutable.HashMap;\n",
     "import BIDMat.GFilter._\n",
+    "import jcuda.jcudnn.cudnnTensorFormat._\n",
+    "import jcuda.jcudnn.cudnnConvolutionFwdAlgo._\n",
+    "\n",
+    "// Best for debugging - matches the CPU tensor order:\n",
+    "//val tformat = CUDNN_TENSOR_NHWC;\n",
+    "//val talgo = CUDNN_CONVOLUTION_FWD_ALGO_IMPLICIT_GEMM;\n",
+    "\n",
+    "// Best for performance:\n",
+    "val tformat = CUDNN_TENSOR_NCHW;\n",
+    "val talgo = CUDNN_CONVOLUTION_FWD_ALGO_GEMM;\n",
     "\n",
     "class Estimator(nhidden:Int, nhidden2:Int, nhidden3:Int, nactions:Int) {\n",
     "\n",
@@ -276,10 +284,10 @@
     "    model(\"W3\") = GFilter2Ddn(10,10,nhidden2,nhidden3,1,0);                     // This is actually an FC layer\n",
     "    model(\"W4\") = GFilter2Ddn(1,1,nhidden3,nactions,1,0);                       // Second FC layer\n",
     "    \n",
-    "    model(\"W1\")(?) = GMat(normrnd(0,1/math.sqrt(7*7*nwindow).toFloat,7*7*nwindow*nhidden))\n",
-    "    model(\"W2\")(?) = GMat(normrnd(0,1/math.sqrt(3*3*nhidden).toFloat,3*3*nhidden*nhidden2))\n",
-    "    model(\"W3\")(?) = GMat(normrnd(0,1/math.sqrt(10*10*nhidden2).toFloat,10*10*nhidden2*nhidden3))\n",
-    "    model(\"W4\")(?) = GMat(normrnd(0,1/math.sqrt(nhidden3).toFloat,nhidden3*nactions))\n",
+    "    model(\"W1\")(?) = GMat(normrnd(0,1/math.sqrt(7*7*nwindow).toFloat,7*7*nwindow*nhidden,1))\n",
+    "    model(\"W2\")(?) = GMat(normrnd(0,1/math.sqrt(3*3*nhidden).toFloat,3*3*nhidden*nhidden2,1))\n",
+    "    model(\"W3\")(?) = GMat(normrnd(0,1/math.sqrt(10*10*nhidden2).toFloat,10*10*nhidden2*nhidden3,1))\n",
+    "    model(\"W4\")(?) = GMat(normrnd(0,1/math.sqrt(nhidden3).toFloat,nhidden3*nactions,1))\n",
     "    \n",
     "//    normrnd(0,1/math.sqrt(7*7*nwindow).toFloat, model(\"W1\"))                    // \"Xavier\" initialization    \n",
     "//    normrnd(0,1/math.sqrt(3*3*nhidden).toFloat, model(\"W2\"))                    // which is normal random with variance 1/indegree\n",
@@ -291,11 +299,17 @@
     "        gradsq.put(k, v.copy);\n",
     "        grad(k).clear\n",
     "        gradsq(k).clear\n",
+    "        v.tensorFormat = tformat\n",
+    "        grad(k).tensorFormat = tformat\n",
+    "        gradsq(k).tensorFormat = tformat\n",
+    "        v.fwdAlgo = talgo\n",
+    "        grad(k).fwdAlgo = talgo\n",
+    "        gradsq(k).fwdAlgo = talgo\n",
     "    } \n",
     "\n",
     "    def _forward(s:GND):(GMat, GND, GND, GMat) = {\n",
     "//        \"\"\" Run the model forward given a state as input.\n",
-    "//    returns action predictions and the hidden state\"\"\"        \n",
+    "//    returns action predictions and the hidden state\"\"\"     \n",
     "        val h = model(\"W1\") * s                  // Forward convolution, h is a tensor\n",
     "        h ~ h *@ (h>=0)                          // ReLU nonlinearity\n",
     "        val h2 = model(\"W2\") * h                 // Forward convolution, h2 is a tensor\n",
@@ -306,33 +320,42 @@
     "        (rew, h, h2, h3)\n",
     "    }\n",
     "    \n",
+    "    def formatInput(s:FMat):GND = {\n",
+    "        if (tformat == CUDNN_TENSOR_NCHW) {\n",
+    "            GMat(s).asND(nwindow,height,width,npar);\n",
+    "        } else {\n",
+    "            GMat(s).asND(height,width,nwindow,npar).transpose(2,0,1,3);\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
     "    def forward(s:FMat):(GMat, GND, GND, GMat) = {\n",
-    "        val ss = GMat(s).asND(height,width,nwindow,npar).transpose(2,0,1,3);  // Fix input state tensor format\n",
+    "        val ss = formatInput(s);\n",
     "        _forward(ss);\n",
     "    }\n",
     "    \n",
     "    \n",
     "    def predict(s:FMat):FMat = {\n",
     "//        \"\"\" Predict the action rewards from a given input state\"\"\"\n",
-    "        val (rew, h, h2, h3) = forward(s)\n",
+    "        val (rew, h, h2, h3) = forward(s);\n",
     "        FMat(rew)\n",
     "    }\n",
     "    \n",
     "    val selector = irow(0->npar)*nactions;\n",
-    "    val farew = zeros(nactions, npar);\n",
+    "    val arew = zeros(nactions, npar);\n",
     "              \n",
     "    def gradient(s:FMat, a:IMat, y:FMat):Float = {\n",
     "//        \"\"\" Given a state s, action a and target y, compute the model gradients\"\"\"\n",
-    "        val ss = GMat(s).asND(height,width,nwindow,npar).transpose(2,0,1,3);  // Fix the input state tensor format\n",
+    "        val ss = formatInput(s); \n",
     "        val (grew, h, h2, h3) = _forward(ss);                             // Run forward\n",
     "        \n",
     "        val rew = FMat(grew);                                            // Compute output gradient on CPU\n",
-    "        val dout = y - rew(a + selector);                                // Get the residuals for the actions a                      \n",
-    "        farew(a + selector) = dout;                                      // The gradient for the actions a\n",
-    "        val arew = GMat(farew);                                          // Back to GPU for the rest\n",
+    "        val dout = y - rew(a + selector);                                // Get the residuals for the actions a \n",
+    "        arew.clear;\n",
+    "        arew(a + selector) = dout;                                      // The gradient for the actions a\n",
+    "        val garew = GMat(arew);                                          // Back to GPU for the rest\n",
     "        \n",
-    "        grad(\"W4\").asMat ~ grad(\"W4\").asMat + (h3 *^ arew);              // Backward model gradient (FC)\n",
-    "        val dh3 = (model(\"W4\").asMat * arew);                            // Backward data gradient (FC)\n",
+    "        grad(\"W4\").asMat ~ grad(\"W4\").asMat + (h3 *^ garew);              // Backward model gradient (FC)\n",
+    "        val dh3 = (model(\"W4\").asMat * garew);                            // Backward data gradient (FC)\n",
     "        dh3 ~ dh3 *@ (h3 > 0)                                            // Map gradients through the RELU\n",
     "        \n",
     "        grad(\"W3\").asMat ~ grad(\"W3\").asMat + (h2.asMat *^ dh3);         // Backward model gradient (FC)\n",
@@ -383,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -418,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -451,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -460,7 +483,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initializing games...76485 steps, 60 epochs in 91.6280 seconds at 1.1980 msecs/step\n"
+      "Initializing games...92180 steps, 77 epochs in 81.3540 seconds at 0.8826 msecs/step\n"
      ]
     }
    ],
@@ -522,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -572,7 +595,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0, time 4.4, loss 0.00000252, epochs 0, reward/epoch 0.00000, cum reward/epoch 0.00000\n"
+      "step 0, time 1.9, loss 0.00000244, epochs 0, reward/epoch 0.00000, cum reward/epoch 0.00000\n",
+      "step 10000, time 88.6, loss 0.07922183, epochs 136, reward/epoch -20.55882, cum reward/epoch -20.55882\n",
+      "step 20000, time 171.7, loss 0.06671724, epochs 254, reward/epoch -20.11864, cum reward/epoch -20.35433\n"
      ]
     }
    ],
@@ -624,7 +649,7 @@
     "    times(6) = toc\n",
     "     \n",
     "    if (istep % rmsevery == 0) {\n",
-    "        q_estimator.msprop(lr, gsq_decay);                       // apply the gradient update\n",
+    "       q_estimator.msprop(lr, gsq_decay);                       // apply the gradient update\n",
     "//        print(\"ds1=%f, ss1=%f, ds2=%f, ss2=%f\\n\" format(res(0,0), res(1,0), res(0,1), res(1,1)));\n",
     "    }\n",
     "    times(7) = toc\n",
@@ -646,34 +671,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "<console>:35: error: not found: value times",
-      "              times",
-      "              ^"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
-    "times"
+    "val s=col(0->25600)*ones(1,16)\n",
+    "val ss = GMat(s).asND(nwindow,height,width,npar);\n",
+    "val h = q_estimator.model(\"W1\") * ss\n",
+    "val h2 = q_estimator.model(\"W2\") * h\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Mat.useCache=false\n",
+    "val s=col(0->25600)*ones(1,2)\n",
+    "val a=2*iones(1,npar)\n",
+    "val y=ones(1,npar)\n",
+    "val selector = irow(0->npar)*nactions;\n",
+    "val farew = zeros(nactions, npar);\n",
+    "q_estimator.model(\"W1\")\n",
+    "val (grew,h,h2,h3) = q_estimator.forward(s)\n",
+    "/*val rew = FMat(grew);                                            // Compute output gradient on CPU\n",
+    "val dout = y - rew(a + selector); \n",
+    "\n",
+    "farew.clear;\n",
+    "farew(a + selector) = dout;                                      // The gradient for the actions a\n",
+    "val arew = GMat(farew); \n",
+    "q_estimator.grad.map({case (k,v)=>v.clear})\n",
+    "val v = q_estimator.gradient(s,a,y)\n",
+    "h3 *^ arew */\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q_estimator.predict(ones(25600,2))\n",
+    "\n"
    ]
   },
   {
@@ -685,54 +731,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "data": {
-      "text/plain": [
-       "   4   7   7  16\n",
-       "   4   7   7  16\n"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val layer=\"W1\"\n",
-    "q_estimator.model(layer).dims on q_estimator.grad(layer).dims \n"
+    "q_estimator.grad(\"W4\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "incomplete"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "val (a,b,c,d) = q_estimator.forward(col(0->25600)*ones(1,2));\n",
+    "d\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "/*state0 = state[:,0]\n",
     "for i in np.arange(200):\n",
@@ -755,27 +781,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "data": {
-      "text/plain": [
-       "16,3,3,32"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "//q_estimator.gradient(state,actions,targets)\n",
     "q_estimator.model(\"W2\").dims"
@@ -783,27 +793,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "data": {
-      "text/plain": [
-       "4,7,7,16"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "val f=FFilter.FFilter2Ddn(7,7,4,16,4,3);\n",
     "f.dims"
@@ -811,75 +805,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "<console>:61: error: not enough arguments for constructor Estimator: (nhidden: Int, nhidden2: Int, nhidden3: Int, nactions: Int)Estimator.",
-      "Unspecified value parameter nactions.",
-      "              val test_estimator = new Estimator(nfeats*nwindow, nhidden, nactions);",
-      "                                   ^",
-      "<console>:79: error: overloaded method value preprocess with alternatives:",
-      "  (I: Array[Byte],out: BIDMat.FMat)BIDMat.FMat <and>",
-      "  (I: BIDMat.FND,out: BIDMat.FMat)BIDMat.FMat",
-      " cannot be applied to (Array[Byte])",
-      "                      val img = preprocess(obs(i));                                       // process the observation",
-      "                                ^",
-      "<console>:83: error: not found: value block_reward",
-      "                  block_reward += sum(rewards).v",
-      "                  ^",
-      "<console>:87: error: not found: value total_reward",
-      "                      total_reward += block_reward;",
-      "                      ^",
-      "<console>:87: error: not found: value block_reward",
-      "                      total_reward += block_reward;",
-      "                                      ^",
-      "<console>:89: error: not found: value block_reward",
-      "                              istep, t, total_epochs, block_reward/math.max(1,total_epochs-last_epochs), total_reward/math.max(1,total_epochs)))",
-      "                                                      ^",
-      "<console>:90: error: not found: value last_epochs",
-      "                      last_epochs = total_epochs;",
-      "                      ^",
-      "<console>:91: error: not found: value block_reward",
-      "                      block_reward = 0f;",
-      "                      ^",
-      "<console>:102: error: not found: value block_reward",
-      "val $ires3 = block_reward",
-      "             ^",
-      "<console>:103: error: not found: value total_reward",
-      "val $ires4 = total_reward",
-      "             ^",
-      "<console>:105: error: not found: value last_epochs",
-      "val $ires6 = last_epochs",
-      "             ^",
-      "<console>:65: error: not found: value block_reward",
-      "              block_reward = 0f;",
-      "              ^",
-      "<console>:66: error: not found: value total_reward",
-      "              total_reward = 0f;",
-      "              ^",
-      "<console>:68: error: not found: value last_epochs",
-      "              last_epochs = 0;",
-      "              ^"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "val test_steps = 100001;\n",
     "val testprintsteps = 10000;\n",
