--- a/notebooks/DQNpong_MSpropConv.ipynb
+++ b/notebooks/DQNpong_MSpropConv.ipynb
@@ -79,7 +79,8 @@
     {
      "data": {
       "text/plain": [
-       "0.25"
+       "  0.62465  0.84862\n",
+       "  0.63891  0.26990\n"
       ]
      },
      "execution_count": 2,
@@ -88,8 +89,9 @@
     }
    ],
    "source": [
-    "val ale = new ALE\n",
-    "ale.getFloat(\"repeat_action_probability\")"
+    "//val ale = new ALE\n",
+    "//ale.getFloat(\"repeat_action_probability\")\n",
+    "rand(2,2)"
    ]
   },
   {
@@ -123,8 +125,8 @@
     }
    ],
    "source": [
-    "val nsteps = 20001                    // Number of steps to run (game actions per environment)\n",
-    "val npar = 2                            // Number of parallel environments\n",
+    "val nsteps = 20000001                    // Number of steps to run (game actions per environment)\n",
+    "val npar = 16                            // Number of parallel environments\n",
     "val target_window = 100                  // Interval to update target estimator from q-estimator\n",
     "val discount_factor = 0.99f              // Reward discount factor\n",
     "val printsteps = 10000                   // Number of steps between printouts\n",
@@ -266,14 +268,16 @@
     "    val model = new HashMap[String, FFilter]();\n",
     "    val grad = new HashMap[String, FFilter]();\n",
     "    val gradsq = new HashMap[String, FFilter]();\n",
+    "    \n",
     "    model(\"W1\") = FFilter.FFilter2Ddn(7,7,nwindow,nhidden,4,3);\n",
-    "    model(\"W1\")(?) = normrnd(0,1,49*nwindow*nhidden,1) / math.sqrt(49*nwindow).toFloat  // \"Xavier\" initialization\n",
     "    model(\"W2\") = FFilter.FFilter2Ddn(3,3,nhidden,nhidden2,2,1);\n",
-    "    model(\"W2\")(?) = normrnd(0,1,9*nhidden*nhidden2,1) / math.sqrt(9*nhidden).toFloat\n",
     "    model(\"W3\") = FFilter.FFilter2Ddn(10,10,nhidden2,nhidden3,0,1);\n",
-    "    model(\"W3\")(?) = normrnd(0,1,10*10*nhidden2*nhidden3,1) / math.sqrt(10*10*nhidden2).toFloat\n",
     "    model(\"W4\") = FFilter.FFilter2Ddn(1,1,nhidden3,nactions,0,1); \n",
-    "    model(\"W4\")(?) = normrnd(0,1,nactions*nhidden3,1) / math.sqrt(nhidden3).toFloat\n",
+    "    \n",
+    "    normrnd(0,1/math.sqrt(model(\"W1\").nrows).toFloat,model(\"W1\"))  // \"Xavier\" initialization\n",
+    "    normrnd(0,1/math.sqrt(model(\"W2\").nrows).toFloat,model(\"W2\"))\n",
+    "    normrnd(0,1/math.sqrt(model(\"W3\").nrows).toFloat,model(\"W3\"))\n",
+    "    normrnd(0,1/math.sqrt(model(\"W4\").nrows).toFloat,model(\"W4\"))\n",
     "    \n",
     "    \n",
     "    for ((k,v) <- model) {\n",
@@ -441,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -450,7 +454,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initializing games..."
+      "Initializing games...70347 steps, 55 epochs in 71.5430 seconds at 1.0170 msecs/step\n"
      ]
     }
    ],
@@ -504,11 +508,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Estimator@6d133151"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q_estimator"
    ]
@@ -522,11 +542,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
    "source": [
     "def random_choices(probs:FMat):IMat = {\n",
     "    val result = izeros(1, probs.ncols);\n",
@@ -547,6 +573,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "data": {
+      "text/plain": [
+       "196"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q_estimator.model(\"W1\").nrows\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -561,7 +614,15 @@
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 0, time 0.3, loss 0.00000300, epochs 0, reward/epoch 0.00000, cum reward/epoch 0.00000\n"
+     ]
+    }
+   ],
    "source": [
     "tic\n",
     "var block_loss = 0f\n",
@@ -635,54 +696,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "data": {
-      "text/plain": [
-       "   4   7   7  16\n",
-       "   4   7   7  16\n"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val layer=\"W1\"\n",
-    "q_estimator.model(layer).dims on q_estimator.grad(layer).dims \n"
+    "sum(q_estimator.model(\"W4\").asMat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "incomplete"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "                                     // The gradient for the actions a \n",
+    "q_estimator.grad.map({case (k,v)=>v.clear})\n",
+    "val v = q_estimator.gradient(s,a,y)\n",
+    "q_estimator.grad(\"W4\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q_estimator.grad(\"W4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "val (a,b,c,d) = q_estimator.forward(col(0->25600)*ones(1,2));\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "/*state0 = state[:,0]\n",
     "for i in np.arange(200):\n",
@@ -705,27 +771,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "data": {
-      "text/plain": [
-       "16,3,3,32"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "//q_estimator.gradient(state,actions,targets)\n",
     "q_estimator.model(\"W2\").dims"
@@ -733,25 +783,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "incomplete"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "//saveFMat(\"BestW1.fmat.lz4\",q_estimator.model(\"W1\"))\n",
     "//saveFMat(\"BestW2.fmat.lz4\",q_estimator.model(\"W2\"))"
@@ -759,33 +795,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "<console>:92: error: not enough arguments for constructor Estimator: (nhidden: Int, nhidden2: Int, nhidden3: Int, nactions: Int)Estimator.",
-      "Unspecified value parameter nactions.",
-      "              val test_estimator = new Estimator(nfeats*nwindow, nhidden, nactions);",
-      "                                   ^"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "val test_steps = 100001;\n",
     "val testprintsteps = 10000;\n",
