--- a/notebooks/DQNpong.ipynb
+++ b/notebooks/DQNpong.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "import BIDMat.{CMat,CSMat,DMat,Dict,FMat,FND,GMat,GDMat,GIMat,GLMat,GSMat,GSDMat,GND,HMat,IDict,Image,IMat,LMat,Mat,SMat,SBMat,SDMat,TMat}\n",
+    "import BIDMat.{CMat,CSMat,DMat,Dict,FMat,GMat,GDMat,GIMat,GLMat,GSMat,GSDMat,HMat,IDict,Image,IMat,LMat,Mat,SMat,SBMat,SDMat,TMat}\n",
     "import BIDMat.MatFunctions._\n",
     "import BIDMat.SciFunctions._\n",
     "import BIDMat.Solvers._\n",
@@ -151,7 +151,7 @@
     "val nactions= VALID_ACTIONS.length\n",
     "val nfeats = 80*80                         \n",
     "\n",
-    "def preprocess(I:FND):FMat = {\n",
+    "def preprocess(I:FMat):FMat = {\n",
     "//  Preprocess Pong game frames into vectors.\n",
     "//  Input:\n",
     "//    - (3,160,210) uint8 frame representing Pong game screen.\n",
