--- a/notebooks/DQNpong_ConvGPU.ipynb
+++ b/notebooks/DQNpong_ConvGPU.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "import BIDMat.{CMat,CSMat,DMat,Dict,FMat,FND,FFilter,Filter,GFilter,GMat,GDMat,GIMat,GLMat,GSMat,GSDMat,GND,HMat,IDict,Image,IMat,LMat,Mat,SMat,SBMat,SDMat,TMat}\n",
+    "import BIDMat.{CMat,CSMat,DMat,Dict,FMat,FFilter,Filter,GFilter,GMat,GDMat,GIMat,GLMat,GSMat,GSDMat,HMat,IDict,Image,IMat,LMat,Mat,SMat,SBMat,SDMat,TMat}\n",
     "import BIDMat.MatFunctions._\n",
     "import BIDMat.SciFunctions._\n",
     "import BIDMat.Solvers._\n",
@@ -184,7 +184,7 @@
     "val height = 80\n",
     "val width = 80\n",
     "\n",
-    "def preprocess(I:FND, out:FMat):FMat = {\n",
+    "def preprocess(I:FMat, out:FMat):FMat = {\n",
     "//  Preprocess Pong game frames into vectors.\n",
     "//  Input:\n",
     "//    - (3,160,210) uint8 frame representing Pong game screen.\n",
@@ -860,9 +860,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "name": "scala",
