--- a/notebooks/DQNpong_MSpropConv.ipynb
+++ b/notebooks/DQNpong_MSpropConv.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "import BIDMat.{CMat,CSMat,DMat,Dict,FMat,FND,FFilter,Filter,GFilter,GMat,GDMat,GIMat,GLMat,GSMat,GSDMat,GND,HMat,IDict,Image,IMat,LMat,Mat,SMat,SBMat,SDMat,TMat}\n",
+    "import BIDMat.{CMat,CSMat,DMat,Dict,FMat,FFilter,Filter,GFilter,GMat,GDMat,GIMat,GLMat,GSMat,GSDMat,HMat,IDict,Image,IMat,LMat,Mat,SMat,SBMat,SDMat,TMat}\n",
     "import BIDMat.MatFunctions._\n",
     "import BIDMat.SciFunctions._\n",
     "import BIDMat.Solvers._\n",
@@ -186,7 +186,7 @@
     "val height = 80\n",
     "val width = 80\n",
     "\n",
-    "def preprocess(I:FND):FMat = {\n",
+    "def preprocess(I:FMat):FMat = {\n",
     "//  Preprocess Pong game frames into vectors.\n",
     "//  Input:\n",
     "//    - (3,160,210) uint8 frame representing Pong game screen.\n",
@@ -287,7 +287,7 @@
     "        gradsq(k).clear\n",
     "    } \n",
     "\n",
-    "    def _forward(s:FND):(FMat, FND, FND, FMat) = {\n",
+    "    def _forward(s:FMat):(FMat, FMat, FMat, FMat) = {\n",
     "//        \"\"\" Run the model forward given a state as input.\n",
     "//    returns action predictions and the hidden state\"\"\"        \n",
     "        val h = model(\"W1\") * s\n",
@@ -300,7 +300,7 @@
     "        (rew, h, h2, h3)\n",
     "    }\n",
     "    \n",
-    "    def forward(s:FMat):(FMat, FND, FND, FMat) = {\n",
+    "    def forward(s:FMat):(FMat, FMat, FMat, FMat) = {\n",
     "        val ss = s.asND(height,width,nwindow,npar).transpose(2,0,1,3);\n",
     "        _forward(ss);\n",
     "    }\n",
