--- a/notebooks/DQNpong_MSpropConv2.ipynb
+++ b/notebooks/DQNpong_MSpropConv2.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "import BIDMat.{CMat,CSMat,DMat,Dict,FMat,FND,FFilter,Filter,GFilter,GMat,GDMat,GIMat,GLMat,GSMat,GSDMat,GND,HMat,IDict,Image,IMat,LMat,Mat,SMat,SBMat,SDMat,TMat}\n",
+    "import BIDMat.{CMat,CSMat,DMat,Dict,FMat,FFilter,Filter,GFilter,GMat,GDMat,GIMat,GLMat,GSMat,GSDMat,HMat,IDict,Image,IMat,LMat,Mat,SMat,SBMat,SDMat,TMat}\n",
     "import BIDMat.MatFunctions._\n",
     "import BIDMat.SciFunctions._\n",
     "import BIDMat.Solvers._\n",
@@ -184,7 +184,7 @@
     "val height = 80\n",
     "val width = 80\n",
     "\n",
-    "def preprocess(I:FND):FMat = {\n",
+    "def preprocess(I:FMat):FMat = {\n",
     "//  Preprocess Pong game frames into vectors.\n",
     "//  Input:\n",
     "//    - (3,160,210) uint8 frame representing Pong game screen.\n",
@@ -283,7 +283,7 @@
     "        gradsq(k).clear\n",
     "    } \n",
     "\n",
-    "    def _forward(s:FND):(FMat, FND, FND, FMat) = {\n",
+    "    def _forward(s:FMat):(FMat, FMat, FMat, FMat) = {\n",
     "//        \"\"\" Run the model forward given a state as input.\n",
     "//    returns action predictions and the hidden state\"\"\"        \n",
     "        val h = model(\"W1\") * s\n",
@@ -296,8 +296,8 @@
     "        (rew, h, h2, h3)\n",
     "    }\n",
     "    \n",
-    "    def forward(s:FMat):(FMat, FND, FND, FMat) = {\n",
-    "        val ss = s.asFND(height,width,nwindow,npar).transpose(2,0,1,3);\n",
+    "    def forward(s:FMat):(FMat, FMat, FMat, FMat) = {\n",
+    "        val ss = s.asFMat(height,width,nwindow,npar).transpose(2,0,1,3);\n",
     "        _forward(ss);\n",
     "    }\n",
     "    \n",
@@ -312,7 +312,7 @@
     "              \n",
     "    def gradient(s:FMat, a:IMat, y:FMat):Float = {\n",
     "//        \"\"\" Given a state s, action a and target y, compute the model gradients\"\"\"\n",
-    "        val ss = s.asFND(height,width,nwindow,npar).transpose(2,0,1,3);\n",
+    "        val ss = s.asFMat(height,width,nwindow,npar).transpose(2,0,1,3);\n",
     "        val (rew, h, h2, h3) = _forward(ss);\n",
     "        val dout = y - rew(a + selector);     \n",
     "        val arew = zeros(rew.nrows, rew.ncols);\n",
@@ -323,7 +323,7 @@
     "        dh3 ~ dh3 *@ (h3 > 0)\n",
     "        \n",
     "        grad(\"W3\").asMat ~ grad(\"W3\").asMat + (h2.asMat *^ dh3);\n",
-    "        val dh2 = (model(\"W3\").asMat * dh3).asFND(nhidden2,10,10,npar);\n",
+    "        val dh2 = (model(\"W3\").asMat * dh3).asFMat(nhidden2,10,10,npar);\n",
     "        dh2 ~ dh2 *@ (h2 > 0)        \n",
     "        \n",
     "//        grad(\"W2\") ~ grad(\"W2\") + (dh2 *^ h);\n",
